--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
-<title>スマホメモ（ドラッグ並べ替え + 容量表示）</title>
+<title>スマホメモ（5MB基準の容量表示）</title>
 <style>
 :root{--bg:#f0f7ff;--card:#fff;--chip:#f6f9ff;--accent:#4b9cff;--muted:#6e6e6e;--icon-size:18px}
 html,body{height:100%;margin:0;background:var(--bg);font-family:-apple-system,BlinkMacSystemFont,"Hiragino Kaku Gothic ProN",Meiryo,Segoe UI,Roboto,"Noto Sans JP",sans-serif}
@@ -11,9 +11,7 @@ html,body{height:100%;margin:0;background:var(--bg);font-family:-apple-system,Bl
 .phone{max-width:420px;margin:12px auto;padding:16px;background:var(--card);border-radius:18px;box-shadow:0 6px 18px rgba(0,0,0,0.06);min-height:70vh;display:flex;flex-direction:column}
 .header{display:flex;align-items:center;gap:12px}
 .title{font-weight:700;font-size:18px}
-.storage{margin-left:auto;text-align:right}
-.storage .bar{width:120px;height:8px;background:#eee;border-radius:8px;overflow:hidden;margin-top:6px}
-.storage .fill{height:100%;background:linear-gradient(90deg,var(--accent),#6ae);width:0%}
+.storage{margin-left:auto;text-align:right;font-size:13px;color:var(--muted)}
 .chip-row{display:flex;gap:8px;overflow:auto;padding:8px 4px;margin-top:12px;-webkit-overflow-scrolling:touch}
 .chip{display:inline-flex;align-items:center;gap:6px;padding:8px 10px;border-radius:14px;background:var(--chip);white-space:nowrap;font-size:14px;cursor:grab}
 .chip.dragging{opacity:0.4}
@@ -30,7 +28,6 @@ html,body{height:100%;margin:0;background:var(--bg);font-family:-apple-system,Bl
 .char-count{margin-left:auto;color:var(--muted);font-size:13px;padding-right:6px}
 textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;line-height:1.6;resize:none;overflow:hidden;border-radius:0;border-bottom-left-radius:8px;border-bottom-right-radius:8px;min-height:64px}
 .hint{font-size:12px;color:var(--muted);margin-top:6px}
-.placeholder{height:48px;border:2px dashed rgba(0,0,0,0.06);border-radius:8px;margin:8px 6px}
 .footer{font-size:12px;color:var(--muted);margin-top:10px}
 </style>
 </head>
@@ -39,10 +36,7 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
   <div class="phone" id="app">
     <div class="header">
       <div class="title">メモ</div>
-      <div class="storage" id="storageInfo">
-        <div id="storageText">容量: —</div>
-        <div class="bar"><div class="fill" id="storageFill"></div></div>
-      </div>
+      <div class="storage" id="storageText">使用: — / 5.0 MB (—%)</div>
     </div>
 
     <div class="chip-row" id="tagBar" aria-label="タブ一覧"></div>
@@ -50,53 +44,56 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
     <div class="main" id="mainArea"></div>
 
     <div class="hint">ヒント: タブやボックスを長押し/ドラッグして並べ替えできます。</div>
-    <div class="footer">※データは端末のローカルに自動保存されます。</div>
+    <div class="footer">※データは端末のローカルに自動保存されます（表示は5MB基準）。</div>
   </div>
 </div>
 
 <script>
 (function(){
-  // シンプルなモバイル向けメモ（ドラッグ並べ替え + 容量表示）
-  const STORAGE_KEY = 'mobile_memo_app_drag_storage_v1';
-  const DEFAULT_QUOTA_FALLBACK = 5 * 1024 * 1024; // 5MB
+  const STORAGE_KEY = 'mobile_memo_app_drag_storage_v1_5mb';
+  const FIXED_QUOTA = 5 * 1024 * 1024; // 5MB（表示基準）
   const tagBar = document.getElementById('tagBar');
   const mainArea = document.getElementById('mainArea');
   const storageText = document.getElementById('storageText');
-  const storageFill = document.getElementById('storageFill');
 
   let state = null;
   const uid = (n=8)=>Math.random().toString(36).slice(2,2+n);
   const debounce = (fn, ms=500)=>{ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn(...a), ms); }; };
 
-  function defaultState(){ return { tabs:[{id:uid(), name:'ノート', boxes:[{id:uid(), content:''}]}], activeTabId:null } }
+  function defaultState(){ return { tabs:[{id:uid(), name:'ノート', boxes:[{id:uid(), content:''}]}], activeTabId:null }; }
 
   function load(){ try{ const raw = localStorage.getItem(STORAGE_KEY); if(!raw){ state = defaultState(); state.activeTabId = state.tabs[0].id; return; } state = JSON.parse(raw); if(!state || !state.tabs || state.tabs.length===0) state = defaultState(); if(!state.activeTabId) state.activeTabId = state.tabs[0].id; }catch(e){ console.error(e); state = defaultState(); } }
 
   function save(){ try{ localStorage.setItem(STORAGE_KEY, JSON.stringify(state)); updateStorageInfo(); }catch(e){ console.error('save error', e); } }
   const saveDebounced = debounce(()=>save(), 700);
 
-  // 容量計算（state の JSON bytes）
-  function stateBytes(){ try{ return new Blob([JSON.stringify(state)]).size; }catch(e){ return new TextEncoder().encode(JSON.stringify(state)).length; } }
-
-  async function getQuota(){ // navigator.storage.estimate があれば使う
-    try{
-      if(navigator.storage && navigator.storage.estimate){
-        const est = await navigator.storage.estimate();
-        if(est.quota) return est.quota;
-      }
-    }catch(e){ /* ignore */ }
-    return DEFAULT_QUOTA_FALLBACK;
+  // バイト数を見やすく変換
+  function niceBytes(bytes){
+    if(bytes === 0) return '0 B';
+    const units = ['B','KB','MB','GB','TB'];
+    const i = Math.floor(Math.log(bytes) / Math.log(1024));
+    return (bytes / Math.pow(1024, i)).toFixed(i<=1?0:2) + ' ' + units[i];
   }
 
-  async function updateStorageInfo(){
+  // state を JSON にしたバイト数（使用量）
+  function stateBytes(){
+    try{ return new Blob([JSON.stringify(state)]).size; }
+    catch(e){ return new TextEncoder().encode(JSON.stringify(state)).length; }
+  }
+
+  // 5MB基準で表示を更新
+  function updateStorageInfo(){
     const used = stateBytes();
-    const quota = await getQuota();
-    const percent = Math.min(100, Math.round((used/quota)*100));
-    storageText.textContent = `容量: ${used} bytes / ${quota} bytes (${percent}%)`;
-    storageFill.style.width = percent + '%';
+    const quota = FIXED_QUOTA;
+    const percent = quota > 0 ? (used / quota * 100) : 0;
+    // 表示: 使用: 12.3 KB / 5.0 MB (0.24%)
+    const usedText = niceBytes(used);
+    const quotaText = (FIXED_QUOTA / 1024 / 1024).toFixed(1) + ' MB';
+    const pctText = (percent < 0.01) ? '<0.01' : percent.toFixed(2);
+    storageText.textContent = `使用: ${usedText} / ${quotaText} (${pctText}%)`;
   }
 
-  // --- render ---
+  // UI / 機能（タブ／ボックスの作成等） — 前と同様の実装
   function createTabElement(tab){
     const el = document.createElement('div');
     el.className = 'chip';
@@ -108,18 +105,13 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
     const copyBtn = document.createElement('button'); copyBtn.className='btn icon-btn'; copyBtn.title='📋 全部コピー'; copyBtn.innerText = '📋';
     copyBtn.addEventListener('click', (ev)=>{ ev.stopPropagation(); copyAll(tab.id); }); el.appendChild(copyBtn);
 
-    // inline edit on long press or edit icon
+    // inline edit
     const editBtn = document.createElement('button'); editBtn.className='btn icon-btn'; editBtn.title='✏️'; editBtn.innerText = '✏️';
     editBtn.addEventListener('click',(ev)=>{ ev.stopPropagation(); startInlineEdit(el, tab); }); el.appendChild(editBtn);
 
-    // delete (X)
+    // delete X (no confirm)
     const delBtn = document.createElement('button'); delBtn.className='btn icon-btn'; delBtn.title='✖️'; delBtn.innerText = '✖️';
-    delBtn.addEventListener('click',(ev)=>{ ev.stopPropagation(); // no confirm
-      state.tabs = state.tabs.filter(t=>t.id!==tab.id);
-      if(state.tabs.length===0) state = defaultState();
-      if(state.activeTabId===tab.id) state.activeTabId = state.tabs[0].id;
-      saveDebounced(); render();
-    }); el.appendChild(delBtn);
+    delBtn.addEventListener('click',(ev)=>{ ev.stopPropagation(); state.tabs = state.tabs.filter(t=>t.id!==tab.id); if(state.tabs.length===0) state = defaultState(); if(state.activeTabId===tab.id) state.activeTabId = state.tabs[0].id; saveDebounced(); render(); }); el.appendChild(delBtn);
 
     if(tab.id === state.activeTabId) el.classList.add('selected');
 
@@ -127,12 +119,9 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
     el.addEventListener('dragstart', (e)=>{ e.dataTransfer.setData('text/plain', JSON.stringify({type:'tab', id:tab.id})); el.classList.add('dragging'); });
     el.addEventListener('dragend', ()=>{ el.classList.remove('dragging'); });
 
-    // allow drop on chip to insert before
-    el.addEventListener('dragover', (e)=>{ e.preventDefault(); const dragging = document.querySelector('.chip.dragging'); if(!dragging) return; el.style.outline = '2px dashed rgba(0,0,0,0.08)'; });
-    el.addEventListener('dragleave', (e)=>{ el.style.outline=''; });
-    el.addEventListener('drop', (e)=>{
-      e.preventDefault(); el.style.outline=''; try{ const d = JSON.parse(e.dataTransfer.getData('text/plain')); if(d.type==='tab'){ reorderTab(d.id, tab.id); } }catch(err){}
-    });
+    el.addEventListener('dragover', (e)=>{ e.preventDefault(); el.style.outline = '2px dashed rgba(0,0,0,0.08)'; });
+    el.addEventListener('dragleave', ()=>{ el.style.outline=''; });
+    el.addEventListener('drop', (e)=>{ e.preventDefault(); el.style.outline=''; try{ const d = JSON.parse(e.dataTransfer.getData('text/plain')); if(d.type==='tab'){ reorderTab(d.id, tab.id); } }catch(err){} });
 
     el.addEventListener('click', ()=>{ if(state.activeTabId !== tab.id){ state.activeTabId = tab.id; saveDebounced(); render(); } });
 
@@ -144,14 +133,13 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
     const to = state.tabs.findIndex(t=>t.id===dropBeforeId);
     if(from<0||to<0) return;
     const item = state.tabs.splice(from,1)[0];
-    const insertIndex = (from < to) ? to+0 : to; // adjust
+    const insertIndex = (from < to) ? to+0 : to;
     state.tabs.splice(insertIndex,0,item);
     saveDebounced(); render();
   }
 
   function createBoxElement(box, idx, tab){
     const card = document.createElement('div'); card.className='box-card'; card.draggable = true; card.dataset.id = box.id;
-    // toolbar
     const toolbar = document.createElement('div'); toolbar.className='toolbar';
     const addBtn = document.createElement('button'); addBtn.className='icon-btn small-plus'; addBtn.title='➕'; addBtn.innerText='➕'; addBtn.addEventListener('click', ()=>{ const nb={id:uid(),content:''}; tab.boxes.splice(idx+1,0,nb); saveDebounced(); render(); focusBox(nb.id); }); toolbar.appendChild(addBtn);
 
@@ -167,16 +155,13 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
 
     card.appendChild(toolbar); card.appendChild(ta);
 
-    // drag events for boxes
     card.addEventListener('dragstart', (e)=>{ e.dataTransfer.setData('text/plain', JSON.stringify({type:'box', id:box.id, tabId:tab.id})); card.classList.add('dragging'); });
     card.addEventListener('dragend', ()=>{ card.classList.remove('dragging'); });
 
-    // allow drop before this card
     card.addEventListener('dragover', (e)=>{ e.preventDefault(); card.style.outline='2px dashed rgba(0,0,0,0.06)'; });
     card.addEventListener('dragleave', ()=>{ card.style.outline=''; });
     card.addEventListener('drop', (e)=>{ e.preventDefault(); card.style.outline=''; try{ const d = JSON.parse(e.dataTransfer.getData('text/plain')); if(d.type==='box'){ reorderBox(d.tabId, d.id, tab.id, box.id); } }catch(er){} });
 
-    // adjust height on creation
     setTimeout(()=>adjustHeight(ta),0);
     return card;
   }
@@ -189,7 +174,6 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
     const toIdx = toTab.boxes.findIndex(b=>b.id===dropBeforeBoxId);
     if(fromIdx<0 || toIdx<0) return;
     const item = fromTab.boxes.splice(fromIdx,1)[0];
-    // if moving within same tab and original index less than target index, adjust
     let insertIndex = toIdx;
     if(fromTabId === toTabId){ const orig = fromIdx; if(orig < toIdx) insertIndex = toIdx; }
     toTab.boxes.splice(insertIndex,0,item);
@@ -207,16 +191,13 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
   }
 
   function render(){
-    // tabs
     tagBar.innerHTML='';
     state.tabs.forEach(tab=>{
       const el = createTabElement(tab);
       tagBar.appendChild(el);
     });
-    // add tab button
     const add = document.createElement('button'); add.className='chip add-tag'; add.innerText='➕ タブ追加'; add.addEventListener('click', ()=>{ const name = prompt('新しいタブ名を入力してください','新しいノート'); if(name===null) return; const t={id:uid(),name:name.trim()||'ノート',boxes:[{id:uid(),content:''}]}; state.tabs.push(t); state.activeTabId = t.id; saveDebounced(); render(); }); tagBar.appendChild(add);
 
-    // main area boxes
     mainArea.innerHTML='';
     const tab = state.tabs.find(t=>t.id===state.activeTabId);
     if(!tab) return;
@@ -227,21 +208,17 @@ textarea{width:100%;box-sizing:border-box;border:0;padding:12px;font-size:15px;l
 
   function focusBox(id){ setTimeout(()=>{ const nodes = mainArea.querySelectorAll('textarea'); for(const n of nodes){ const card = n.closest('.box-card'); if(card && card.dataset.id===id){ n.focus(); const v=n.value; n.value=''; n.value=v; adjustHeight(n); break; } } },200); }
 
-  // allow dropping tabs into empty space (append)
   tagBar.addEventListener('dragover', (e)=>{ e.preventDefault(); });
-  tagBar.addEventListener('drop', (e)=>{ e.preventDefault(); try{ const d = JSON.parse(e.dataTransfer.getData('text/plain')); if(d.type==='tab'){ // append at end
-      const idx = state.tabs.findIndex(t=>t.id===d.id); if(idx>=0){ const item = state.tabs.splice(idx,1)[0]; state.tabs.push(item); saveDebounced(); render(); }
-    } }catch(_){} });
+  tagBar.addEventListener('drop', (e)=>{ e.preventDefault(); try{ const d = JSON.parse(e.dataTransfer.getData('text/plain')); if(d.type==='tab'){ const idx = state.tabs.findIndex(t=>t.id===d.id); if(idx>=0){ const item = state.tabs.splice(idx,1)[0]; state.tabs.push(item); saveDebounced(); render(); } } }catch(_){} });
 
-  // allow dropping boxes into empty area (append to tab)
   mainArea.addEventListener('dragover', (e)=>{ e.preventDefault(); });
   mainArea.addEventListener('drop', (e)=>{ e.preventDefault(); try{ const d = JSON.parse(e.dataTransfer.getData('text/plain')); if(d.type==='box'){ const fromTab = state.tabs.find(t=>t.id===d.tabId); const toTab = state.tabs.find(t=>t.id===state.activeTabId); if(!fromTab||!toTab) return; const fromIdx = fromTab.boxes.findIndex(b=>b.id===d.id); if(fromIdx<0) return; const item = fromTab.boxes.splice(fromIdx,1)[0]; toTab.boxes.push(item); saveDebounced(); render(); } }catch(_){} });
 
-  // initialize
+  // init
   load(); if(!state.activeTabId) state.activeTabId = state.tabs[0].id; render();
 
-  // storage info periodic update
-  setInterval(updateStorageInfo, 2000);
+  // update display regularly (in case something changes)
+  setInterval(updateStorageInfo, 1500);
 
 })();
 </script>
